// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContentText ACT theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiDialogContentText-root MuiTypography-root MuiTypography-body1 css-1rxhis5-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ACT_ET theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiDialogContentText-root MuiTypography-root MuiTypography-body1 css-1fivzk0-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiDialogContentText-root MuiTypography-root MuiTypography-body1 css-4bubc8-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;
